$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-2 (opened October 10, 2008)

    * permatfull: bug of row/col marins is fixed, shuffle argument is
    added to enable individual and sample based randomisation of
    count data (or both) when not all the margins are fixed.

	* anosim: API and documentation made similar to mrpp to combine
	their documentation. Now anosim can take data frame input and find
	the dissimilarities internally.
	
Version 1.16-1 (closed October 10, 2008)

	* dispindmorisita: function to calculate Morisita's index of
	dispersion, and its standardized version. Uses the correct way of
	standardizing, see Note section in help.

	* radfit: Should work with empty sites (no species) or when the
	number of species is less or equal the number of parameters
	estimated (like may happen in sweeping analysis of data frames or
	simulations). Takes care that input data frames have row names
	which are necessary for displaying results.
	
	* head.summary.cca & tail.summary.cca: shortcuts to
	print(summary(x, ...), head, tail) for nicer Sweave tutorials.
	
Version 1.16-0 (closed on September 30, 2008)

	* New devel version after branching the release version
	1.15-0. Identical to the release version, but includes MOStest and
	adipart functions that were removed from 1.15-0.
	
Version 1.14-12 (closed September 26, 2008)

	* add1.cca, drop1.cca: new functions that also implement
	permutation tests with argument test = "permutation", but only use
	default methods with test = "none". Function drop1.cca uses
	anova.cca(..., by = "margin"), and add1.cca implements a new type of
	analysis for single term additions. The immediate reason for
	implementing these tests was that I found out that step(..., test
	= "Chisq") worked(!) producing parametric likelihood ratio tests,
	and this hole had to be closed before users notice this.

	* anova.cca: improved treatment of models where constrained or